updating yaml for further use
