# Code/spring-server/src/main/resources/api-spec.yaml
@@ -1,6 +1,6 @@
 swagger: '2.0'
 info:
-  version: '0.1.0'
+  version: '0.1.2'
   title: Simple tasks API
   description: An API example to test swagger
 host: 192.168.99.100
@@ -99,16 +99,12 @@ paths:
           description: "Information returned correctly"
           schema:
             $ref: '#/definitions/Execution'
-        '406':
+        '415':
           description: "Payload sent does not respect accept header"
           schema:
             $ref: '#/definitions/ErrorResponse'
         '422':
           description: "Json is incomplete or doesn't match the application's specification"
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-        '500':
-          description: "Error on creation of Execution"
           schema:
             $ref: '#/definitions/ErrorResponse'
   '/executions/{exec_id}':
@@ -156,16 +152,12 @@ paths:
           description: "Information returned correctly"
           schema:
             $ref: '#/definitions/Step'
-        '406':
+        '415':
           description: "Payload sent does not respect accept header"
           schema:
             $ref: '#/definitions/ErrorResponse'
         '422':
           description: "Json is incomplete or doesn't match the application's specification"
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-        '500':
-          description: "Error on creation of Task"
           schema:
             $ref: '#/definitions/ErrorResponse'
   '/steps/{step_id}':
@@ -217,6 +209,9 @@ definitions:
         type: string
       description:
         type: string
+      creationDate:
+        type: integer
+        format: int64
       execs:
         type: array
         items:
@@ -237,8 +232,12 @@ definitions:
         type: string
       self:
         type: string
+      creationDate:
+        type: integer
+        format: int64
       steps:
         type: array
+
         items:
           $ref: '#/definitions/Step'
   NewStep:
@@ -267,6 +266,9 @@ definitions:
         type: string
       context:
         type: string
+      creationDate:
+        type: integer
+        format: int64
       status:
         type: string
         enum:
